@@ -1,3 +1,9 @@
+2006-08-27  Nathaniel Smith  <njs@pobox.com>
+
+	* database.cc (put_version): Add some MM()'s, in case the
+	invariant in this function fails again (as reported on the mailing
+	list).
+
 2006-08-25  Nathaniel Smith  <njs@pobox.com>
 
 	* cmd_ws_commit.cc (status): Print current branch, and parent rev,
